--- a/Fast4DReg Plugin/Fast4DReg_/src/main/resources/plugins.config
+++ b/Fast4DReg Plugin/Fast4DReg_/src/main/resources/plugins.config
@@ -1,5 +1,5 @@
-, "F4DR Estimate Drift", gui.DriftEstimation_
-, "F4DR Correct Drift", gui.DriftCorrection_
+Plugins>Fast4DReg>Legacy 2D, "F4DR Estimate Drift", gui.DriftEstimation_
+Plugins>Fast4DReg>Legacy 2D, "F4DR Correct Drift", gui.DriftCorrection_
 Plugins>Fast4DReg>NanoJTable IO, "F4DR Open NanoJ Table (NJT)...", gui.tools.io.OpenNanoJTable_
 Plugins>Fast4DReg>NanoJTable IO, "F4DR Save Results-Table as NJT...", gui.tools.io.SaveResultsTableAsNJT_
 
